<resources>
    <string name="app_name">XTravel</string>
    <string name="action_settings">Settings</string>
    <string name="app_key">96597424</string>
    <string name="app_secret">90e88ed13ab74a739d28fceaa3e11832</string>
	<string name="api_url">http://api.dianping.com/v1/position/get_coordinate</string>
    <string-array name="main_tabs">
        <item>主页</item>
        <item>推荐</item>
        <item>用户</item>
        <item>更多</item>
    </string-array>
    <string name="around">附近服务</string>
    <string name="book">快捷预定</string>
    <string name="travel">景区导览</string>
    <string name="close">关闭</string>
    <string name="loading">拼命加载中</string>
    <string name="result_null">查询结果为空</string>
    <string name="network_not_connected">无网络连接</string>
    <string name="vesion">V1.0 Beta</string>
    <string name="copyright">Copyright©2014 AppleLab.All Rights Reserved.</string>
    <string name="spinner_prompt">Select the panorama type</string>
    <string-array name="panorama_types">
        <item>Cubic</item>
        <item>Spherical2</item>
        <item>Spherical</item>
        <item>Cylindrical</item>
    </string-array>
    <string name="layout_main_hint1">请输入用户名</string>
    <string name="layout_main_hint2">请输入密码</string>
    <string name="layout_main_lable1">账户:</string>
    <string name="layout_main_lable2">密码:</string>
    <string name="info">Vuforia sample applications showcase key features and demonstrate basic functionality to help you get started. The Unity samples are structured as individual Unity Packages that can be imported into a new project and built to run on a device. The native packages consist of a single sample application that demonstrates core Vuforia functionality along with individual samples for more advanced topics.</string>
    <string name="button_OK">OK</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    <string-array name="reservations">
        <item>门票预订</item>
        <item>酒店预订</item>
        <item>美食预订</item>
    </string-array>
    <string-array name="categories">
        <item>旅游</item>
        <item>酒店</item>
        <item>美食</item>
    </string-array>
    <string name="search_loc_hints">请输入城市的中文名称或拼音</string>
</resources>