<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAAAAAA" >

    <FrameLayout
        android:id="@+id/welcome_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/actionbar_bg"
            android:contentDescription="@null"
            android:scaleType="fitXY" />

        <TextView
            style="@style/ActivityActionbarTextStyle"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#FFF"/>
    </FrameLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_img"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            style="@style/QuickBookingItemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vesion"
            android:textColor="#FFF"
            android:textSize="15sp" />

        <TextView
            style="@style/QuickBookingItemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="50"
            android:text="@string/copyright"
            android:textColor="#FFF"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>